# surya-tabular-ocr

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/utils/: verify_benchmark_scores.py
surya/: models.py  pipeline.py  settings.py
surya/common/: util.py
surya/debug/: fonts.py  text.py
surya/input/: processing.py
surya/layout/: schema.py
surya/recognition/: __init__.py  languages.py  postprocessing.py  util.py
surya/scripts/: ocr_text.py
surya/table_rec/: __init__.py
tests/: conftest.py
